bin_PROGRAMS = darkice
CXXFLAGS = -O2 -pedantic -Wall
INCLUDES = @LAME_INCFLAGS@ @VORBIS_INCFLAGS@
LDADD = @LAME_LDFLAGS@ @VORBIS_LDFLAGS@

darkice_SOURCES =   AudioEncoder.h\
                    AudioSource.h\
                    BufferedSink.cpp\
                    BufferedSink.h\
                    CastSink.cpp\
                    CastSink.h\
                    FileSink.h\
                    FileSink.cpp\
                    Connector.cpp\
                    Connector.h\
                    DarkIce.cpp\
                    DarkIce.h\
                    Exception.cpp\
                    Exception.h\
                    IceCast.cpp\
                    IceCast.h\
                    IceCast2.cpp\
                    IceCast2.h\
                    ShoutCast.cpp\
                    ShoutCast.h\
                    FileCast.h\
                    FileCast.cpp\
                    LameLibEncoder.cpp\
                    LameLibEncoder.h\
                    VorbisLibEncoder.cpp\
                    VorbisLibEncoder.h\
                    aflibDebug.h\
                    aflibDebug.cc\
                    aflibConverter.h\
                    aflibConverter.cc\
                    aflibConverterLargeFilter.h\
                    aflibConverterSmallFilter.h\
                    OssDspSource.cpp\
                    OssDspSource.h\
                    SolarisDspSource.cpp\
                    SolarisDspSource.h\
                    Ref.h\
                    Referable.h\
                    Sink.h\
                    Source.h\
                    TcpSocket.cpp\
                    TcpSocket.h\
                    Util.cpp\
                    Util.h\
                    ConfigSection.h\
                    ConfigSection.cpp\
                    Config.h\
                    Config.cpp\
                    Reporter.h\
                    Reporter.cpp\
                    main.cpp

